# Explorion

./: .gitignore  README.md  docker-compose.yml  render.yaml  setup.bat  setup.sh  task.md
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  __init__.py  import_trace.txt  main.py  paper_details.json  pyproject.toml  requirements.txt  start.bat  start.sh  test_e2e_local.py  test_remotion_only.py  test_routes.py  test_startup.py
backend/.remotion_runtime/: package-lock.json  package.json  tsconfig.json
backend/agents/: __init__.py  base.py  code_validator.py  coder.py  context7_docs.py  dedalus_base.py  manim_generator.py  pipeline.py  planner.py  render_tester.py  section_analyzer.py  spatial_validator.py  summarizer.py  visualization_planner.py  voiceover_generator.py  voiceover_script_validator.py
backend/api/: routes.py  schemas.py
backend/db/: __init__.py  connection.py  models.py  queries.py
backend/docreader/: router.py
backend/extractors/: arxiv_extractor.py
backend/ingestion/: __init__.py  arxiv_fetcher.py  content_fetcher.py  github_analyzer.py  github_fetcher.py  html_parser.py  pdf_parser.py  section_extractor.py  section_formatter.py
backend/jobs/: __init__.py  sample_manim.py  worker.py
backend/models/: __init__.py  content.py  generation.py  paper.py  spatial.py  voiceover.py
backend/pipeline/: graph.py  state.py
backend/prompts/: __init__.py  manim_generator.md  section_analyzer.md  visualization_planner.md  voiceover_generator.md
backend/providers/: __init__.py  groq_client.py  nim_client.py
backend/renderers/: manim_renderer.py  remotion_renderer.py
backend/tts/: __init__.py
(+71 files in other folders)
